--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     compile 'com.datastax.cassandra:cassandra-driver-core:3.3.0'
     compile 'org.apache.cassandra:cassandra-all:3.11.0'
+    compile group: 'com.datastax.cassandra', name: 'cassandra-driver-extras', version: '3.3.2'
+
 }
 
 jar {
